@@ -63,9 +63,9 @@ Boston, MA 02111-1307, USA.  */
    version of the library, but it does have a debugging version (libg.a) */
 #undef LIB_SPEC 
 #define LIB_SPEC "%{!mor32-newlib*:%{!p:%{!pg:-lc}}%{p:-lc_p}%{pg:-lc_p}} \
-                  %{mor32-newlib:%{!g:-lc -lor32 -lc}                     \
-                                 %{g:-lg -lor32 -lg}}                      \
-                  %{mor32-newlib-uart:%{!g:-lc -lor32uart -lc}            \
+                  %{mor32-newlib:%{!g:-lc -lor32 -u _free -lc}            \
+                                 %{g:-lg -lor32 -lg}}                     \
+                  %{mor32-newlib-uart:%{!g:-lc -lor32uart -u _free -lc}   \
                                  %{g:-lg -lor32uart -lg}}"
 
 /* Old definition of LIB_SPEC, not longer used. */
